# zero2prod

./: .env.example  Cargo.toml  configuration.yaml  test.yaml
migrations/: 20230610085011_create_subscriptions_table.sql  20230610125217_change_id_type_to_uuid.sql  20230623133004_add_status_to_subscriptions.sql  20230624023201_make_status_not_null_in_subscriptions.sql  20230624031329_add_create_subscription_tokens_table.sql  20230703100653_create_users_table.sql  20230703105942_rename_password_column.sql  20230703134653_add_salt_to_users.sql  20230704095510_remove_salt_from_users.sql  20230908113523_create_idempotency_table.sql  20230910045705_relax_null_check_constraint_on_idempotency.sql  20230910072856_create_newsletter_issues_table.sql  20230910073928_create_issue_delivery_queue_table.sql
src/: authentication.rs  configuration.rs  email_client.rs  errors.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: health_check.rs  home.html  home.rs  newsletters.rs  subscription.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
