[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-web-lab = "0.18"
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
anyhow = "1"
argon2 = { version = "0.4", features = ["std"] }
base64 = "0.21"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = "0.13"
hex = "0.4"
htmlescape = "0.3"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "mysql",
    "chrono",
    "migrate",
    "uuid",
] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
validator = "0.16"

[dev-dependencies]
claims = "0.7"
fake = "~2.3"
linkify = "0.9"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_urlencoded = "0.7.1"
